--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,7 +205,7 @@ jobs:
           paths:
             - project/.circleci/ansible/inventory.txt
 
-      - destroy-environment
+      #- destroy-environment
           
   configure-infrastructure:
    docker:
@@ -224,7 +224,7 @@ jobs:
             cat inventory.txt
             
         
-     - destroy-environment
+    # - destroy-environment
 
      # Here's where you will add some code to rollback on failure      
  # run-migrations:
